--- a/fake_volume_detection.ipynb
+++ b/fake_volume_detection.ipynb
@@ -428,6 +428,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After recording, you can compare the best bid & best ask & see if from the trades API, they have transctions, left by readers."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
